# le-jour-et-la-nuit-subtitles-creator

./: .gitignore  README.md  config.py  main.py  pyproject.toml
export/: example-subtitle.srt  le_jour_et_la_nuit_EN.srt  le_jour_et_la_nuit_FR.srt
export_data/: le_jour_et_la_nuit_ES.srt  le_jour_et_la_nuit_JA.srt  subtitle.srt
source/: source_data.csv
source_data/: source.csv
